syntax = "proto3";

package x.proxy;
option go_package = "github.com/5vnetwork/vx-core/app/configs/proxy";
import "protos/user.proto";

// ServerConfig is the protobuf config for Socks server.
message SocksServerConfig {
  AuthType auth_type = 1;
  repeated x.UserConfig accounts = 2;
  // used as BND.ADDR of the reply to a socks request
  string address = 3;
  bool udp_enabled = 4;
}

// ClientConfig is the protobuf config for Socks client.
message SocksClientConfig {
  string name = 1;
  string password = 2;
  bool delay_auth_write = 3;
}

enum AuthType {
  // NO_AUTH is for anonymous authentication.
  NO_AUTH = 0;
  // PASSWORD is for username/password authentication.
  PASSWORD = 1;
}
